--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dayjs": "^1.11.13",
         "dotenv": "^16.1.4",
         "express": "^4.18.2",
+        "form-data": "^4.0.4",
         "jsonwebtoken": "^9.0.2",
         "mime-types": "^3.0.1",
         "mongoose": "^7.3.4",
